fixed additional images view on mobile, introduced burger menu for mobile

--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -59,6 +59,14 @@ color: $white;
 background-color: $black;
 }
 
+.text {
+  font-size: 14px;
+  line-height: 1.6;
+  letter-spacing: 1.1px;
+  text-align: center;
+  color: dimgrey;
+}
+
 .ml-large {
   margin-left: $marg-large;
 }
@@ -147,7 +155,7 @@ background-color: $black;
 // page transitions
 .fade-enter-active,
 .fade-leave-active {
-  transition: all 300ms ease-in-out;
+  transition: all 400ms ease-in-out;
 }
 
 .fade-enter,
